--- a/src/views/_footer/footer.ejs
+++ b/src/views/_footer/footer.ejs
@@ -1,5 +1,9 @@
+<% 
+const year = new Date().getFullYear();
+%> 
+
 <footer class="display-grid justify-content-center">
-    <p><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a> | <strong>BlackDayz &copy; 2022</strong></p>
+    <p><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a> | <strong>BlackDayz &copy; <%= year %> </strong></p>
     <span class="display-flex justify-content-center">
         <a rel="me" href="https://mastodon.green/@mittelblut9">Mastodon</a>
         <a title="BlackDayz Instagram" href="https://www.instagram.com/blackdayz_de/"><img src="svg/social_media/icons8-instagram.svg"/></a>
