--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,12 +93,12 @@ a {
 
 .about_me_left {
     width: 50%;
-    padding: 5% 100px 0 100px;
+    padding: 0 100px 0 100px;
     font-weight: 520;
 }
 
 .about_me_left p {
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     letter-spacing: 1.2px;
 }
 
