--- a/src/assets/css/header/header.css
+++ b/src/assets/css/header/header.css
@@ -2,7 +2,7 @@
     position: sticky;
     position: -webkit-sticky;
     top: 0;
-    background: var(--black);
+    background: var(--white);
     z-index: 100;
 }
 
