--- a/src/assets/scss/homepage/homepage.scss
+++ b/src/assets/scss/homepage/homepage.scss
@@ -1,34 +1,4 @@
-@import url('./blackcss.css');
-@import url('./projects/project.css');
-
-:root {
-    --white: rgb(226, 226, 226);
-    --black: #1e1e1e;
-}
-
-::-webkit-scrollbar {
-    width: 0px;
-    display: none;
-}
-
-* {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    font-display: optional;
-    scrollbar-width: none;
-}
-
-body,
-html {
-    margin: 0;
-    padding: 0;
-    font-family: roboto, sans-serif;
-    background: var(--white);
-}
-
-a {
-    color: inherit;
-}
+@import '../variables.scss';
 
 .top_page {
     height: 100vh;
