--- a/src/assets/scss/work/work.scss
+++ b/src/assets/scss/work/work.scss
@@ -16,8 +16,13 @@
 }
 
 .work_name {
-    transform: translateY(-350px);
+    transform: translateY(-250px);
     pointer-events: none;
+
+    
+    @media (min-width: 576px) { 
+        transform: translateY(-350px);
+    }
 }
 
 .work_show_more a {
